--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -4,3 +4,21 @@
 h1{
     color: blue !important;
 }
+section{
+  min-height: calc(100vh - 131px);
+  height: calc(100% - 140px);
+}
+footer{
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 2;
+  .copyright{
+    text-align: center;
+    padding: 20px;
+    margin: 0px;
+    height: auto;
+    background-color: #252525;
+    color: white;
+  }
+}
