--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,9 +1,14 @@
 @import '../assets/bootstrap/customizations.scss';
 @import '../../node_modules/react-responsive-carousel/lib/styles/carousel.min.css';
 
+.active{
+  color:#555 !important;
+  background-color: #e7e7e7 !important;
+}
 h1{
     color: blue !important;
 }
+
 section{
   min-height: calc(100vh - 131px);
   height: calc(100% - 140px);
